--- a/kadry/src/main/webapp/pracownikumowy/sub/pracownik_umowy.xhtml
+++ b/kadry/src/main/webapp/pracownikumowy/sub/pracownik_umowy.xhtml
@@ -9,11 +9,16 @@
     <p:tabView id="akordeon">
         <p:tab title="zestawienie umów">
             <h:form id="AneksForm" styleClass="formsrodek">
+                <p:panelGrid columns="2">
+                    <h:outputText value="pokaż tylko bieżące"/>
+                    <p:selectBooleanCheckbox value="#{pracownikUmowyView.pokazbiezace}" >
+                        <p:ajax event="change" listener="#{pracownikUmowyView.pobierzbiezace}" update="akordeon:AneksForm:datalist"/>
+                    </p:selectBooleanCheckbox>
+                </p:panelGrid>
                 <p:outputPanel style="margin-top: 20px;">
                     <p:dataTable id="datalist" value="#{pracownikUmowyView.listaumowy}" var="itemUmowa" rowIndexVar="yndex" filteredValue="#{pracownikUmowyView.listaumowyfiltered}"
                                  selectionMode="single" 
-                                 rowKey="#{itemUmowa.id}"  sortBy="#{itemUmowa.nazwiskoImie}"
-                                 style="height: 450px; overflow-y: scroll;width: 1600px;"
+                                 rowKey="#{itemUmowa.id}"                                   style="height: 450px; overflow-y: scroll;width: 1600px;"
                                  rowsPerPageTemplate="20,100,250,500" paginatorPosition="top" paginator="true" rows="20"
                                  emptyMessage="Nie pobrano listy"
                                  >
@@ -26,7 +31,7 @@
                             </f:facet>
                             <h:outputText value="#{yndex+1}"/>
                         </p:column>
-                        <p:column width="150" sortBy="#{itemUmowa.nazwiskoImie}">
+                        <p:column width="150" sortBy="#{itemUmowa.nazwiskoImie}" sortOrder="1">
                             <f:facet name="header">
                                 <h:outputText value="nazwisko i imię"/>
                             </f:facet>
