--- a/npkpir_23/web/wspolny/sub/faktura/faktura_rozmiary.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_rozmiary.xhtml
@@ -24,22 +24,22 @@
                     <h:outputText value="#{wpiswym.nazwa}" />
                 </p:column>
                 <p:column headerText="gora"  >
-                    <p:inputNumber  value="#{wpiswym.gora}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="0" minValue="-10000000" size="5">
+                    <p:inputNumber  value="#{wpiswym.gora}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="0" minValue="-10000000" size="5">
 <!--                        <p:ajax event="change" partialSubmit="true" listener="#{pozycjeNaFakturzeView.zapamietajwymiar(wpiswym)}" update="akordeon:formwzor"/>-->
                     </p:inputNumber>
                 </p:column>
                 <p:column headerText="lewy" >
-                    <p:inputNumber  value="#{wpiswym.lewy}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="0" minValue="-10000000" size="5">
+                    <p:inputNumber  value="#{wpiswym.lewy}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="0" minValue="-10000000" size="5">
 <!--                        <p:ajax event="change" partialSubmit="true" listener="#{pozycjeNaFakturzeView.zapamietajwymiar(wpiswym)}" update="akordeon:formwzor"/>-->
                     </p:inputNumber>
                 </p:column>
                 <p:column headerText="szerokość" >
-                    <p:inputNumber  value="#{wpiswym.szerokosc}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" size="7">
+                    <p:inputNumber  value="#{wpiswym.szerokosc}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" size="7">
                         <p:ajax event="change" partialSubmit="true" listener="#{pozycjeNaFakturzeView.zapamietajwymiar(wpiswym)}" update="akordeon:formwzor"/>
                     </p:inputNumber>
                 </p:column>
                 <p:column headerText="wysokość" >
-                    <p:inputNumber  value="#{wpiswym.wysokosc}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" size="7">
+                    <p:inputNumber  value="#{wpiswym.wysokosc}"  style="float: right; margin-right: 4px;"  symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" size="7">
                         <p:ajax event="change" partialSubmit="true" listener="#{pozycjeNaFakturzeView.zapamietajwymiar(wpiswym)}" update="akordeon:formwzor"/>
                     </p:inputNumber>
                 </p:column>
