--- a/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
@@ -206,7 +206,7 @@
                     <p:column headerText="kwota netto*"  width="105" style="height: 28px;">
                         <p:inputNumber id="kwotaPkpir" value="#{row.netto}" symbol="#{DokumentView.symbolWalutyNettoVat}" required="true" 
                                         requiredMessage="Brak kwoty - uzupełnij" style="text-align: right; height: 19px;" 
-                                        symbolPosition="s" decimalSeparator=","  symbol="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
+                                        symbolPosition="s" decimalSeparator="," inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
                                         styleClass="wiersznetto  #{row.listaKolumna1Rozbicie.size() gt 0 ? 'colorgreen':null}" onfocus="kalkulator_pobierzwiersz(this);dolaczwyliczenieKopiowanie(event);"
                                         > 
                             <p:ajax event="focus" listener="#{DokumentView.podepnijEwidencjeVat}" global="false"
