Revert "primefaces 8 zmiany decimalSeparator z "." na "," zmiany w plikach xhtmldalej przecinki"
This reverts commit 3c605de76a26cbc64ddd9bf2d1fe1edd83d007ee.

--- a/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
@@ -404,7 +404,7 @@
                                 <h:outputText value="symbol KST"/>
                             </p:column>
                             <p:column>
-                                <h:outputText value="stawka amort."/>
+                                <h:outputText value="tawka amort."/>
                             </p:column>
                             <p:column>
                                 <h:outputText value="dotychczasowe umorzenie"/>
