--- a/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
@@ -426,7 +426,7 @@
                                 <h:outputText value="symbol KST"/>
                             </p:column>
                             <p:column>
-                                <h:outputText value="stawka amort."/>
+                                <h:outputText value="tawka amort."/>
                             </p:column>
                             <p:column>
                                 <h:outputText value="dotychczasowe umorzenie"/>
@@ -450,8 +450,7 @@
                             <p:inputText value="#{DokumentView.selectedSTR.kst}" style="width: 30px;"/>
                         </p:column>
                         <p:column style="text-align: center;">
-                            <p:inputNumber value="#{DokumentView.selectedSTR.stawka}" symbol=" zł" required="true"
-                                           requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;width: 30px;" symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="0" styleClass="wiersznetto"/> 
+                            <p:inputText value="#{DokumentView.selectedSTR.stawka}" style="width: 30px;"/>
                         </p:column>
                         <p:column>
                             <p:inputNumber value="#{DokumentView.selectedSTR.umorzeniepoczatkowe}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
