--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_rk_ewidencjaVAT.xhtml
@@ -91,7 +91,7 @@
                                 thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-1000000" styleClass="wiersznetto"> 
                     <p:ajax global="false" event="change" listener="#{dokfkView.updatenettoRKwaluta()}" partialSubmit="true"/>
                 </p:inputNumber>
-                <p:inputNumber id="netto" value="#{dokfkView.ewidencjaVatRK.netto}" symbol="&#160;"
+                <p:inputNumber id="netto" value="#{dokfkView.ewidencjaVatRK.netto}" 
                                 required="true" requiredMessage="Brak kwoty - uzupełnij" onfocus="kalkulator_pobierzwiersz(this);"
                                 style="text-align: right; height: 19px;" symbolPosition="s" decimalSeparator=","  size="12"
                                 thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-1000000" styleClass="wiersznetto"> 
