--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_kurs_recznie_wpis.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_kurs_recznie_wpis.xhtml
@@ -47,7 +47,7 @@
                 </p:column>
                 <p:column headerText="wartość w pln" width="150" style="text-align: center;">
                     <p:inputNumber value="#{wpis.kurssredni}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" size="16"
-                                            style="text-align: right;" symbolPosition="s" decimalSeparator=","  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="5" minValue="-1000000" styleClass="wiersznetto"> 
+                                            style="text-align: right;" symbolPosition="s" decimalSeparator="."  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="5" minValue="-1000000" styleClass="wiersznetto"> 
                     </p:inputNumber>
                 </p:column>
                 <p:column width="40" style="text-align: center;">
@@ -89,7 +89,7 @@
                         </f:facet>
                         <f:facet name="input">
                             <p:inputNumber value="#{wpis.kurssredni}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" 
-                                            style="text-align: right;" symbolPosition="s" decimalSeparator=","  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="4" minValue="-1000000" styleClass="wiersznetto"> 
+                                            style="text-align: right;" symbolPosition="s" decimalSeparator="."  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="4" minValue="-1000000" styleClass="wiersznetto"> 
                              </p:inputNumber>
                         </f:facet>
                     </p:cellEditor>
