--- a/npkpir_23/web/manager/sub/fakturadodatki.xhtml
+++ b/npkpir_23/web/manager/sub/fakturadodatki.xhtml
@@ -113,7 +113,7 @@
                     <p:column headerText="kwota" width="100" sortBy="#{zapis.kwotaindywid}">
                         <p:inputNumber  value="#{zapis.kwotaindywid}" size="10" 
                                         style="float: right; margin-right: 4px;"
-                            symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="-99999" maxValue="99999">
+                            symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-99999" maxValue="99999">
                             <p:ajax event="change" partialSubmit="true" listener="#{fakturaDodPozycjaKontrahentView.edytuj(zapis,2)}" />
                         </p:inputNumber>
                     </p:column>
@@ -213,7 +213,7 @@
                     <p:column headerText="kwota" width="100" sortBy="#{zapis1.kwotaindywid}">
                         <p:inputNumber  value="#{zapis1.kwotaindywid}" size="10" 
                                         style="float: right; margin-right: 4px;"
-                            symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="-99999" maxValue="99999">
+                            symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-99999" maxValue="99999">
                             <p:ajax event="change" partialSubmit="true" listener="#{fakturaDodPozycjaKontrahentView.edytuj(zapis1,2)}" />
                         </p:inputNumber>
                     </p:column>
