--- a/npkpir_23/web/wspolny/sub/dialogi/dialog_srodkitrwale_zmianawartosci.xhtml
+++ b/npkpir_23/web/wspolny/sub/dialogi/dialog_srodkitrwale_zmianawartosci.xhtml
@@ -44,18 +44,18 @@
                     <p:column>
                         <p:inputNumber id="cenazakupu" value="#{sTRTabView.edytowanysrodek.netto}" symbol=" zł" required="true" requiredMessage="Brak kwoty netto - uzupełnij" 
                                        onblur="zweryfikujczyniebrakujesrodektrw('form_dialog_srodkitrwale_zmianawartosci');" valueChangeListener="#{sTRTabView.zmianakwotynetto}"
-                                       style="text-align: right;" symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
+                                       style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <h:outputText value="kwota vat"/>
                     <p:column>
                         <p:inputNumber id="kwotavat" value="#{sTRTabView.edytowanysrodek.vat}" symbol=" zł" required="true" requiredMessage="Brak kwoty vat - uzupełnij" 
-                                       style="text-align: right;" symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
+                                       style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <h:outputText value="umorzenie pocz."/>
                     <p:column>
                         <p:inputNumber id="umorzeniepocz" value="#{sTRTabView.edytowanysrodek.umorzeniepoczatkowe}" symbol=" zł" required="true" requiredMessage="Brak kwoty umorzenia - uzupełnij" 
                                        onblur="zweryfikujczyniebrakujesrodektrw('form_dialog_srodkitrwale_zmianawartosci');" valueChangeListener="#{sTRTabView.zmianaumorzeniapocz}"
-                                       style="text-align: right;" symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
+                                       style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <h:outputText value="środek trw/wyposazenie"/>
                     <p:column>
@@ -79,7 +79,7 @@
                     <h:outputText value="zwiększenie/zmniejszenie o"/>
                     <p:inputNumber id="kwotaPkpir" value="#{sTRTabView.kwotazmiany}" symbol="zł" required="true" 
                                    requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" 
-                                   symbolPosition="s" decimalSeparator=","   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
+                                   symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
                                    styleClass="wiersznetto" > 
                         <p:ajax event="change" global="false" partialSubmit="true"/>
                     </p:inputNumber>
