--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
@@ -43,7 +43,7 @@
             </p:panelGrid>
             <p:panelGrid columns="9"  rendered="#{WpisView.biuroiszef eq true}">
 <!--                <h:outputText value="Procent waloryzacji 100=100%"/>
-                <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s" decimalSeparator=","  maxValue="100">
+                <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s" decimalSeparator="."  maxValue="100">
                     <p:ajax event="blur" partialSubmit="true" global="false"/>
                 </p:inputNumber>-->
                 <h:outputText value="Data wystawienia"/>
@@ -63,11 +63,11 @@
                 </p:selectOneMenu>
                 <h:outputText value="filtruj wg wartości od-do"/>
                 <p:inputNumber  value="#{fakturaView.dolnylimit}" symbol=" zł" 
-                                style="width: 70px;" symbolPosition="s" decimalSeparator=","  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
+                                style="width: 70px;" symbolPosition="s" decimalSeparator="."  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
                     <p:ajax event ="blur" partialSubmit="true"/>
                 </p:inputNumber>
                 <p:inputNumber  value="#{fakturaView.gornylimit}" symbol=" zł" 
-                                         style="width: 70px;" symbolPosition="s" decimalSeparator=","  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
+                                         style="width: 70px;" symbolPosition="s" decimalSeparator="."  thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
                     <p:ajax event ="blur" listener="#{fakturaView.filtrujfaktury2}" update="akordeon:formokresowe:dokumentyOkresowe"  partialSubmit="true"/>
                 </p:inputNumber>
             </p:panelGrid>
