--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
@@ -168,7 +168,7 @@
                         </f:facet>
                         <f:facet name="input">  
                             <p:inputNumber value="#{item.kwota}" required="true" styleClass="kwotarozrachunku" size="9"
-                                    symbolPosition="s" decimalSeparator=","  
+                                    symbolPosition="s" decimalSeparator="."  
                                     thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-1000000"/> 
                         </f:facet>
                     </p:cellEditor>
@@ -183,7 +183,7 @@
                         </f:facet>
                         <f:facet name="input">  
                             <p:inputNumber value="#{item.kwota}" required="true" styleClass="kwotarozrachunku" size="9"
-                                    symbolPosition="s" decimalSeparator=","  
+                                    symbolPosition="s" decimalSeparator="."  
                                     thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-1000000"/> 
                         </f:facet>
                     </p:cellEditor>
