--- a/npkpir_23/web/admin/sub/mailedopodatnikow.xhtml
+++ b/npkpir_23/web/admin/sub/mailedopodatnikow.xhtml
@@ -119,7 +119,7 @@
         <p:tab title="załącznik">
             <h:form>
                 <p:panel header="Wczytaj plik, który będzie umieszczony jako załącznik do maila"/>
-                <p:fileUpload listener="#{adminMailView.zachowajZalacznik}" 
+                <p:fileUpload fileUploadListener="#{adminMailView.zachowajZalacznik}" 
                               update="@form" mode="advanced" dragDropSupport="true" fileLimit="3"
                                 sizeLimit="2000000"  
                                 validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
