--- a/npkpir_23/web/ksiegowa/ksiegowaImportFaktury.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaImportFaktury.xhtml
@@ -35,7 +35,7 @@
                                 </p:inputText>
                             </p:panelGrid>
                             <p:growl life="3600"  id="messages1"/>
-                            <p:fileUpload listener="#{importFakturyView.importujsprzedaz}" 
+                            <p:fileUpload fileUploadListener="#{importFakturyView.importujsprzedaz}" 
                                           mode="advanced" dragDropSupport="true" fileLimit="1"
                                           update="messages1 importtabela" sizeLimit="4000000"  auto="true"
                                           validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
