--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsv.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsv.xhtml
@@ -28,7 +28,7 @@
                             <p:growl life="3600"  id="messages1"/>
                             <p:panelGrid columns="3">
                                 <p:panelGrid columns="1">
-                                    <p:fileUpload listener="#{importCSVView.importujsprzedaz}" 
+                                    <p:fileUpload fileUploadListener="#{importCSVView.importujsprzedaz}" 
                                                   mode="advanced" fileLimit="1"
                                                   update="messages1 importtabela" 
                                                   validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
