--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsv_nazwy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsv_nazwy.xhtml
@@ -24,7 +24,7 @@
             <p:growl life="3600"  id="messages1"/>
             <p:panelGrid columns="2">
                 <p:panelGrid columns="1">
-                    <p:fileUpload listener="#{amazonImportNazwy.importujsprzedaz}" 
+                    <p:fileUpload fileUploadListener="#{amazonImportNazwy.importujsprzedaz}" 
                                   mode="advanced" dragDropSupport="true" fileLimit="1"
                                   update="messages1 importtabelanazwy" 
                                   validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
