--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsvebay.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importamazoncsvebay.xhtml
@@ -26,7 +26,7 @@
         <h:form id="importtabelaebayinit">
             <p:growl life="3600"  id="messages1"/>
             <p:panelGrid columns="1">
-                <p:fileUpload listener="#{amazonImportEbay.importujsprzedaz}" 
+                <p:fileUpload fileUploadListener="#{amazonImportEbay.importujsprzedaz}" 
                               mode="advanced" dragDropSupport="true" fileLimit="1"
                               update="messages1 importtabelaebay" 
                               validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
