--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankontimport.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankontimport.xhtml
@@ -11,7 +11,7 @@
             <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent">
                     <p:panelGrid columns="1" style="margin-top: 20px;margin-bottom: 10px;">
                         <h:outputText value="Akceptowana wersja pliku xls,xlsx" style="font-weight: bold;"/>
-                        <p:fileUpload listener="#{planKontView.zachowajplik}" 
+                        <p:fileUpload fileUploadListener="#{planKontView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="form_dialog_plankont_imp panelplik:mes" 
                                       invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(xls|xlsx)$/" invalidFileMessage="Niewłaściwy format pliku: "
