--- a/npkpir_23/web/wspolny/sub/importklientow.xhtml
+++ b/npkpir_23/web/wspolny/sub/importklientow.xhtml
@@ -11,7 +11,7 @@
     <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent">
             <p:panelGrid columns="1" style="margin-top: 20px;margin-bottom: 10px;">
                 <h:outputText value="Akceptowana wersja pliku xls,xlsx" style="font-weight: bold;"/>
-                <p:fileUpload listener="#{kontrahentImportView.zachowajplik}" 
+                <p:fileUpload fileUploadListener="#{kontrahentImportView.zachowajplik}" 
                               mode="advanced" dragDropSupport="true" multiple="false" sequential="true" auto="true"
                               update="formimportklientow2 formimportklientow" 
                               invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(xls|xlsx)$/" invalidFileMessage="Niewłaściwy format pliku: "
