--- a/npkpir_23/web/wspolny/sub/importraportzorin.xhtml
+++ b/npkpir_23/web/wspolny/sub/importraportzorin.xhtml
@@ -13,7 +13,7 @@
             <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent" >
                     <p:panelGrid columns="1" style="margin-top: 20px;">
                         <h:outputText value="Akceptowana wersja pliku xml" style="font-weight: bold;"/>
-                        <p:fileUpload listener="#{importRaportZorinView.zachowajplik}" 
+                        <p:fileUpload fileUploadListener="#{importRaportZorinView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="messages2 panelprzyciskow akordeon5:form_importinterpaper panelplik:rodzajrach" 
                                       invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(csv|xls|xml|xlsx)$/" invalidFileMessage="Niewłaściwy format pliku: "
