--- a/npkpir_23/web/wspolny/sub/importxlsmatacz.xhtml
+++ b/npkpir_23/web/wspolny/sub/importxlsmatacz.xhtml
@@ -11,7 +11,7 @@
             <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent">
                     <p:panelGrid columns="1" style="margin-top: 20px;margin-bottom: 10px;">
                         <h:outputText value="Akceptowana wersja pliku xls,xlsx, xml" style="font-weight: bold;"/>
-                        <p:fileUpload listener="#{importMataczView.zachowajplik}" 
+                        <p:fileUpload fileUploadListener="#{importMataczView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="messages2 panelprzyciskow importmatacz " 
                                       invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(csv|xls|xml|xlsx)$/" invalidFileMessage="Niewłaściwy format pliku: "
