--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont1.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont1.xhtml
@@ -9,8 +9,14 @@
     <style>
        
     </style>
+<!--    //STARY NIE UZYWAC DOBRY JEST W KATALOGU PLANKONT-->
+<!--    //STARY NIE UZYWAC DOBRY JEST W KATALOGU PLANKONT-->
+<!--    //STARY NIE UZYWAC DOBRY JEST W KATALOGU PLANKONT-->
+<!--    //STARY NIE UZYWAC DOBRY JEST W KATALOGU PLANKONT-->
+<!--    //STARY NIE UZYWAC DOBRY JEST W KATALOGU PLANKONT-->
+<!--    //STARY NIE UZYWAC DOBRY JEST W KATALOGU PLANKONT-->
     <p:outputPanel deferredMode="true">
-    <p:dialog id="dialogplankont1" header="Plan kont firmy #{WpisView.podatnikObiekt.nazwapelnaPDF} rok #{WpisView.rokWpisuSt}" widgetVar="dialogplankont1" 
+    <p:dialog id="dialogplankont1" header="Plan kont firmy dialogplankont1 #{WpisView.podatnikObiekt.nazwapelnaPDF} rok #{WpisView.rokWpisuSt}" widgetVar="dialogplankont1" 
               resizable="false" 
               onShow="ustawdialog('dialogplankont1','menuustawienia', 1330, 750);ustalmaxlevel('form_dialog_plankont1:dataList_data');" closeOnEscape="true" onHide="resetujdialog('dialogplankont1');"  >
         <h:form id="form_dialog_plankont1">
