--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
@@ -19,7 +19,7 @@
                 <p:menuitem id="noweanalityczne" value="Nowe analityczne" icon="ui-icon-circle-plus" onclick="PF('nowekontoanalityczne').show();" global="false"/>
                 <p:menuitem id="noweslownik1" value="Dołącz słownik" icon="ui-icon-circle-plus" onclick="PF('nowekontoslownik').show();"  global="false"/>
                 <p:menuitem id="usunslownik" value="Usuń cały słownik" icon="ui-icon-circle-plus" onclick="PF('usunkontoslownik').show();"  global="false"/>
-                <p:menuitem id="noweedycjanazwy" value="Edycja konta" icon="ui-icon-circle-plus" onclick="PF('dialogedycjanazwkonta').show();"  global="false"/>
+<!--                <p:menuitem id="noweedycjanazwy" value="Edycja konta" icon="ui-icon-circle-plus" onclick="PF('dialogedycjanazwkonta').show();"  global="false"/>-->
                 <p:menuitem  value="Oznacz jako kosztowe" icon="ui-icon-circle-plus" actionListener="#{planKontView.oznaczkontoJakoKosztowe()}" update="form_dialog_plankont:dataList"/>
                 <p:menuitem  value="Oznacz jako przychodowe" icon="ui-icon-circle-plus" actionListener="#{planKontView.oznaczkontoJakoPrzychodowe()}" update="form_dialog_plankont:dataList"/>
                 <p:menuitem value="Usuń" actionListener="#{planKontView.usun('K')}" icon="ui-icon-trash" update="form_dialog_plankont:dataList"/>
@@ -27,7 +27,7 @@
                 <p:menuitem value="Implem. konto z analityką" actionListener="#{planKontView.implementacjaJednegoKontadoWzorcowychZAnalitykom()}" icon="ui-icon-tag" update="form_dialog_plankont:dataList" rendered="#{facesContext.externalContext.remoteUser eq '4'}"/>
                 <p:menuitem value="Blokada" actionListener="#{planKontView.obslugaBlokadyKonta()}" icon="ui-icon-locked" update=":form_dialog_plankont"/>
                 <p:menuitem value="Blokada wszystkie" actionListener="#{planKontView.obslugaBlokadyKontaWszystkie()}" icon="ui-icon-locked" update=":form_dialog_plankont"/>
-                <p:menuitem value="Porządkuj wybrane konto" onclick="PF('confirm5').show();" global="false" icon="ui-icon-tag" 
+                <p:menuitem value="Porządkuj wybrane konto" onclick="PF('confirm5').show();"  global="false" icon="ui-icon-tag" 
                             />
                 <p:menuitem value="Porządkuj konta" onclick="PF('confirm3').show();" global="false" icon="ui-icon-tag" 
                             />
@@ -93,7 +93,7 @@
                         <f:selectItems value="#{planKontView.listaukladow}" var="loop"  itemLabel="#{loop.uklad} - #{loop.rok}" itemValue="#{String.valueOf(loop.lp)}"/>
                         <p:ajax event="change" update="form_dialog_plankont:dataList" partialSubmit="true" listener="#{planKontView.zmienuklad()}"/>
                     </p:selectOneMenu>
-                   <p:commandButton value="update konta" actionListener="#{planKontView.updatekonta}" update="form_dialog_plankont:dataList"/>
+                   <p:commandButton value="nanieś pozycje" actionListener="#{planKontView.naniespozycjeNakontaZbazy}" update="form_dialog_plankont:dataList"/>
             </p:panelGrid>
             <p:panelGrid columns="10">
                 <p:commandButton value="0" actionListener="#{planKontView.planBezSlownikowychSyntetyczne(WpisView.podatnikObiekt,0)}" update="form_dialog_plankont:dataList form_dialog_plankont:bezslownikowych"/>
@@ -114,7 +114,7 @@
                                               (planKontView.kontadowyswietlenia eq 'wynikowe' ? (loop.przychod0koszt1 eq false ? 'rowb_szczegolne' : 'rowb_zwykle') : 
                                               (loop.bilansowewynikowe eq 'bilansowe' ? (loop.level eq 0 ? 'row1' : loop.level eq 1 ? 'row2' : loop.level eq 2 ? 'row3' : 'row4') : (loop.level eq 0 ? 'row1w' : (loop.level eq 1 ? 'row2w' : loop.level eq 2 ? 'row3w' : 'row4w'))))}"
                              styleClass="tablicaplankont" rowHover="true"  editable="true" editMode="cell"
-                             style="width: 1500px;margin-bottom:0px;" emptyMessage="Brak utworzonych kont dla firmy" rowKey="#{loop.id}"
+                             style="width: 1600px;margin-bottom:0px;" emptyMessage="Brak utworzonych kont dla firmy" rowKey="#{loop.id}"
                              rowsPerPageTemplate="250,500,500,1000,1500" paginatorPosition="top" paginator="true" rows="250"
                              rowIndexVar="index"
                              >
@@ -196,6 +196,9 @@
                                 </h:selectOneMenu>
                             </f:facet>
                         </p:cellEditor>
+                    </p:column>
+                    <p:column style="width: 40px; text-align: center;">
+                        <p:commandButton icon="fa fa-pencil" actionListener="#{planKontView.setSelectednodekontoZmiana(loop)}" update=":formedycjanazw" oncomplete="PF('dialogedycjanazwkonta').show();"/>
                     </p:column>
                 </p:dataTable>
             </p:panelGrid>
